# que-bot

./: .env.dist  .gitignore  .pre-commit-config.yaml  README.md  babel.cfg  bot.py  docker-compose.yml  justfile  loader.py  pyproject.toml  requirements.txt
deprecated/: app_scheduler.py  create_forms_funcs.py  data_operations.py  determin_location.py  extra_features.py  get_next_user_func.py  language_ware.py  message_operations.py  notify_admins.py  photo_operations.py  reaction_strategies.py  send_form_func.py  statistics.py  templates_messages.py
deprecated/admin/inline/: customers.py  mailing.py  payments.py  ref.py  reply_menu.py  setting.py
deprecated/default/: admin_default.py  get_contact_default.py  get_location_default.py  get_photo.py
deprecated/handlers/: echo_handler.py
deprecated/handlers/admins/: monitoring.py
deprecated/handlers/errors/: error_handler.py
deprecated/handlers/groups/: event_moderate.py  start.py
deprecated/handlers/users/: back.py  brandbook.py  buy_unban.py  change_datas.py  change_event_datas.py  event.py  event_list.py  filters.py  registration.py  start.py  support.py  user_profile.py  verification.py  view_event.py  view_ques.py
deprecated/inline/: admin_inline.py  back_inline.py  cancel_inline.py  change_data_profile_inline.py  filters_inline.py  guide_inline.py  language_inline.py  main_menu_inline.py  menu_profile_inline.py  payments_inline.py  poster_inline.py  questionnaires_inline.py  registration_inline.py  settings_menu.py  support_inline.py
docs/: DEVELOPMENT.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  App.tsx  index.css  main.jsx  style.ts
frontend/src/configs/: AxiosConfig.js
src/: __init__.py
src/infrastructure/: __init__.py
src/tgbot/: config.py  types.py
test/test_api/: test_location.py
test/test_functions/: test_event_functions.py
test/test_handlers/: test_echo.py  test_group_start.py
tests/: __init__.py
tests/e2e/: conftest.py  test_help.py  test_profile.py
tests/utils/: __init__.py  _get_session_string.py  helpers.py
(+117 files in other folders)
