[tool.poetry]
name = "datingbot"
version = "0.1.0"
description = "A Dating Telegram Bot with open source code"
authors = ["David Dzhalaev <72649244+DavidRomanovizc@users.noreply.github.com>"]
license = "Attribution-NonCommercial 3.0 Unported"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
environs = "^10.2.0"
better-profanity = ">=0.7.0,<0.8.0"
aiohttp = "<3.9.3"
apscheduler = "^3.10.4"
nudenet = "^3.0.8"
pydantic = "^2.4.1"
redis = "^5.0.1"
betterlogging = ">=0.2.1,<0.3.0"
que-sdk = "^0.1.7"
babel = "^2.15.0"
yandex-geo = "^2.1.1"


[tool.poetry.group.dev.dependencies]
telethon = "^1.35.0"
pytest-asyncio = "^0.23.6"
anyio = "^4.3.0"
flake8 = "^7.0.0"
black = "^23.12.1"
mypy = "^1.8.0"
isort = "^5.13.2"
deptry = "^0.12.0"
ruff = "^0.1.14"
pip-audit = "^2.7.0"
pre-commit = "^3.6.0"
pytest = "^7.4.4"

[tool.black]
line-length = 99
exclude = [
    "venv",
    ".git",
    "deprecate/"
]
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
strict_optional = false
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
warn_redundant_casts = true
warn_unused_configs = true
strict_equality = true
exclude = ["deprecated"]

[tool.isort]
profile = "black"
force_grid_wrap = 1
multi_line_output = 3
honor_noqa = true
float_to_top = true
combine_as_imports = true
force_sort_within_sections = true
include_trailing_comma = true
line_length = 99
use_parentheses = true
known_third_party = ['django', 'rest_framework_extensions', 'aiogram']
known_first_party = ["common", "usersmanage", ]
skip = ["__init__.py", "app.py"]

[tool.ruff]
line-length = 99

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/{tests,docs,tools,migrations}/*" = ["F401"]

[tool.deptry]
ignore = ["DEP002"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
